@@ -1048,3 +1048,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20160503 accessor.pl,doc/libspectrum.txt,sna.c,snap_accessors.txt,snapshot.c,
          szx.c,z80.c: add skeleton of support for Currah uSource snapshots
          (patch #363) (Fred and Sergio).
+20160508 szx.c: use Opus flags when writing chunk (Sergio).
